--- a/index.html
+++ b/index.html
@@ -6,20 +6,67 @@
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="topnav" id="myTopnav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#newsletter">Newsletter</a>
+
+    <div class="wrapper">
+        <header id=" site-header ">
+
+
+            <nav id="topnav">
+                <div class="logo1" id="mylogo1">
+                    <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/bent-creek-logo.png">
+                </div>
+                <a href="#home ">Home</a>
+                <a href="#about ">About</a>
+                <a href="#newsletter ">Newsletter</a>
+
+            </nav>
+
+        </header>
+    </div>
+    <div>
+        <h1>Bent Creek Ceramics</h1>
+        <h2>Where art meets nature</h2>
+    </div>
+    <div class="image1" id="myImage1">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg"> </div>
+    <p>Endless Possiblities</p>
+
+
+    <div class="image2" id="myImage2">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-2.jpg">
+        <p>Sets</p>
+    </div>
+    <div class="image3" id="myImage3">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-3.jpg">
+        <p>Textures</p>
+    </div>
+    <div class="image4" id="myImage4">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-4.jpg">
+        <p>Tea Time</p>
 
     </div>
+    <div class="image5" id="myImage5">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-5.jpg">
+        <p>Jars and Containers</p>
 
+    </div>
+    <div class="image6" id="myImage6">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-6.jpg">
+        <p>Wasabi and Saki</p>
+    </div>
+    <div class="image7" id="myImage7">
+        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-7.jpg">
+        <p>Sippin on Sunshine</p>
+    </div>
 
+    <footer>
+        <p>Copyright 2017, Bent Creek Ceramics</p>
 
-
-
+    </footer>
 
 </body>
 
