--- a/index.html
+++ b/index.html
@@ -19,54 +19,64 @@
                 <div class="logo1" id="mylogo1">
                     <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/bent-creek-logo.png">
                 </div>
-                <a href="#home ">Home</a>
-                <a href="#about ">About</a>
-                <a href="#newsletter ">Newsletter</a>
+                <div class="nav-links">
+                    <a href="#home ">Home</a>
+                    <a href="#about ">About</a>
+                    <a href="#newsletter ">Newsletter</a>
+                </div>
+                <div></div>
 
             </nav>
 
         </header>
-    </div>
-    <div>
-        <h1>Bent Creek Ceramics</h1>
-        <h2>Where art meets nature</h2>
-    </div>
-    <div class="image1" id="myImage1">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg"> </div>
-    <p>Endless Possiblities</p>
-
-
-    <div class="image2" id="myImage2">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-2.jpg">
-        <p>Sets</p>
-    </div>
-    <div class="image3" id="myImage3">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-3.jpg">
-        <p>Textures</p>
-    </div>
-    <div class="image4" id="myImage4">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-4.jpg">
-        <p>Tea Time</p>
 
     </div>
-    <div class="image5" id="myImage5">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-5.jpg">
-        <p>Jars and Containers</p>
+    <div=c lass="mainland">
 
-    </div>
-    <div class="image6" id="myImage6">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-6.jpg">
-        <p>Wasabi and Saki</p>
-    </div>
-    <div class="image7" id="myImage7">
-        <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-7.jpg">
-        <p>Sippin on Sunshine</p>
-    </div>
+        <div>
+            <h1>Bent Creek Ceramics</h1>
+            <h2>Where art meets nature</h2>
+        </div>
+        <div class="wrap-around">
+            <div class="image1" id="myImage1">
+                <img class="image60" class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg">
+                <p>Endless Possiblities</p>
+            </div>
 
-    <footer>
-        <p>Copyright 2017, Bent Creek Ceramics</p>
 
-    </footer>
+            <div class="image2">
+                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-2.jpg">
+                <p>Sets</p>
+            </div>
+            <div class="image3" id="myImage3">
+                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-3.jpg">
+                <p>Textures</p>
+            </div>
+            <div class="image4" id="myImage4">
+                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-4.jpg">
+                <p>Tea Time</p>
+
+            </div>
+            <div class="image5" id="myImage5">
+                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-5.jpg">
+                <p>Jars and Containers</p>
+
+            </div>
+            <div class="image6" id="myImage6">
+                <img class="image40" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-6.jpg">
+                <p>Wasabi and Saki</p>
+            </div>
+            <div class="image7" id="myImage7">
+                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-7.jpg">
+                <p>Sippin on Sunshine</p>
+            </div>
+        </div>
+        </div>
+
+        <footer>
+            <p>Copyright 2017, Bent Creek Ceramics</p>
+
+        </footer>
 
 </body>
 
