--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
 
     </div>
-    <div=c lass="mainland">
+    <div class="mainland">
 
         <div>
             <h1>Bent Creek Ceramics</h1>
@@ -39,7 +39,7 @@
         </div>
         <div class="wrap-around">
             <div class="image1" id="myImage1">
-                <img class="image60" class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg">
+                <img class="image60" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg">
                 <p>Endless Possiblities</p>
             </div>
 
@@ -71,12 +71,12 @@
                 <p>Sippin on Sunshine</p>
             </div>
         </div>
-        </div>
+    </div>
 
-        <footer>
-            <p>Copyright 2017, Bent Creek Ceramics</p>
+    <footer>
+        <p>Copyright 2017, Bent Creek Ceramics</p>
 
-        </footer>
+    </footer>
 
 </body>
 
