--- a/index2.html
+++ b/index2.html
@@ -69,10 +69,41 @@
         <div class="table">
             <h3>Monthly Plans</h3>
             <table>
+                <thead>
+                    <tr>
+                        <td>Plan</td>
+                        <td>Price</td>
+                        <td>Access</td>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Desk Only</td>
+                        <td>$50/mo</td>
+                        <td>Business Hours + Weekly Kiln Access</td>
+
+                    </tr>
+                    <tr>
+                        <td>Desk + Storage</td>
+                        <td>$100/mo</td>
+                        <td>Business Hours + Weekly Kiln Access</td>
+                    </tr>
+                    <tr>
+                        <td>Unlimited</td>
+                        <td>$150/mo</td>
+                        <td>Unlimited Access</td>
+                    </tr>
+                </tbody>
+
             </table>
+
         </div>
 
-
+        <footer id="site-footer">
+            <span>Copyright 2017, Bent Creek Ceramics</span>
+        </footer>
+</body>
 
 
 
