--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
+    <link href="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/stylesheet2.css" rel="stylesheet">
 
 </head>
 
@@ -106,8 +107,6 @@
 </body>
 
 
-
-</body>
 
 
 </html>
