--- a/index3.html
+++ b/index3.html
@@ -6,19 +6,17 @@
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
-
+    <link href="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/stylesheet3.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="wrapper1">
+    <div class=" wrapper1 ">
         <header id=" site-header ">
-
-
-            <nav id="topnav">
-                <div class="logo1" id="mylogo1">
-                    <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/bent-creek-logo.png">
+            <nav id="topnav ">
+                <div class="logo1 " id="mylogo1 ">
+                    <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/bent-creek-logo.png ">
                 </div>
-                <div class="nav-links">
+                <div class="nav-links ">
                     <a href="#home ">Home</a>
                     <a href="#about ">About</a>
                     <a href="#newsletter ">Newsletter</a>
@@ -29,10 +27,18 @@
     </div>
     <div>
 
-        <div class="bgimage">
-            <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/background-2.jpg">
+        <div class="bgimage ">
+            <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/background-2.jpg ">
             <section>
                 <h1>Sign Up For Our Weekly Newsletter</h1>
                 <h3>Stay up to date with events, activities, news and specials</h3>
             </section>
+            <form>
+
+            </form>
         </div>
+    </div>
+
+</body>
+
+</html>
