--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 
 
             <nav id="topnav">
-                <div class="logo1" id="mylogo1">
-                    <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/bent-creek-logo.png">
-                </div>
+                <div class="logo1" id="mylogo"></div>
                 <div class="nav-links">
-                    <a href="#home ">Home</a>
-                    <a href="#about ">About</a>
-                    <a href="#newsletter ">Newsletter</a>
+                    <a class="home" href="#home ">Home</a>
+                    <a class="about" href="#about ">About</a>
+                    <a class="newsletter" href="#newsletter ">Newsletter</a>
                 </div>
-                <div></div>
+
 
             </nav>
 
@@ -37,44 +35,45 @@
             <h1>Bent Creek Ceramics</h1>
             <h2>Where art meets nature</h2>
         </div>
-        <div class="wrap-around">
-            <div class="image1" id="myImage1">
-                <img class="image60" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg">
-                <p>Endless Possiblities</p>
-            </div>
-
-
-            <div class="image2">
-                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-2.jpg">
-                <p>Sets</p>
-            </div>
-            <div class="image3" id="myImage3">
-                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-3.jpg">
-                <p>Textures</p>
-            </div>
-            <div class="image4" id="myImage4">
-                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-4.jpg">
-                <p>Tea Time</p>
-
-            </div>
-            <div class="image5" id="myImage5">
-                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-5.jpg">
-                <p>Jars and Containers</p>
-
-            </div>
-            <div class="image6" id="myImage6">
-                <img class="image40" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-6.jpg">
-                <p>Wasabi and Saki</p>
-            </div>
-            <div class="image7" id="myImage7">
-                <img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-7.jpg">
-                <p>Sippin on Sunshine</p>
-            </div>
+    </div>
+    <section>
+        <div class="image1" id="myImage1">
+            <!--<img class="image60" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-1.jpg">-->
+            <p>Endless Possiblities</p>
         </div>
+
+
+        <div class="image2">
+            <!--<img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-2.jpg">-->
+            <p>Sets</p>
+        </div>
+        <div class="image3" id="myImage3">
+            <!--<img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-3.jpg">-->
+            <p>Textures</p>
+        </div>
+        <div class="image4" id="myImage4">
+            <!--<img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-4.jpg">-->
+            <p>Tea Time</p>
+
+        </div>
+        <div class="image5" id="myImage5">
+            <!--<img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-5.jpg">-->
+            <p>Jars and Containers</p>
+
+        </div>
+        <div class="image6" id="myImage6">
+            <!--<img class="image40" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-6.jpg">-->
+            <p>Wasabi and Saki</p>
+        </div>
+        <div class="image7" id="myImage7">
+            <!--<img class="image20" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/product-7.jpg">-->
+            <p>Sippin on Sunshine</p>
+        </div>
+    </section>
     </div>
 
     <footer>
-        <p>Copyright 2017, Bent Creek Ceramics</p>
+        <span>Copyright 2017, Bent Creek Ceramics</span>
 
     </footer>
 
