--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
-    <link href="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/stylesheet3.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
