about page done

--- a/index2.html
+++ b/index2.html
@@ -10,14 +10,14 @@
 
 </head>
 
-<body>
+<body class="about">
     <div class="wrapper1">
         <header id=" site-header ">
 
 
             <nav id="topnav">
                 <div class="logo1" id="mylogo1">
-                    <img src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/bent-creek-logo.png">
+
                 </div>
                 <div class="nav-links">
                     <a href="#home ">Home</a>
@@ -29,84 +29,82 @@
         </header>
     </div>
     <header>
-        <h1>A Community of Artists</h1>
+        <div class="headline">A Community of Artists</div>
     </header>
-    <div class="wrapper2">
-        <div class="birdhouse">
-            <img class="birdhousepic" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/birdhouse.jpg">            </div>
-        <p>Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for
-            20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur.
+    <section class="opener">
 
-        </p>
-        <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives." -Jenn Wilson (Founder)
-        </blockquote>
-        <h3>History
-            <h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-                    aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-                    dolores eos qui ratione voluptatem sequi nesciunt.
+        <div>
+            <img class="birdhouse" src="./images/birdhouse.jpg">
+            <div class="dedication">Our studio, established in 1989, has been providing local artists with a <a href=" #facilities ">dedicated evironment</a>                for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. </div>
+        </div>
 
-                </p>
+        <div class="mission-statement ">"Our mission is to provide people with beautiful, functional items which enhance lives."
+            <br> -Jenn Wilson (Founder)
+        </div>
+        <div class="leader">History</div>
+
+        <div class="history">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+            ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+            ratione voluptatem sequi nesciunt.
+        </div>
+
+    </section>
+
+    <div class="midimage">
+
+
+        <div class="roomToGrow">Room To Grow</div>
+
     </div>
-    <div class="wrapper3">
-        <div class="backgroundimg">
-            <img class="backgroundpic" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/background-3.jpg">
-            <p>
-                <h1>Room To Grow</h1>
-            </p>
-        </div>
-        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
+
+    <section class="closing">
+        <div class="leader" id="facilities "> Facilities</div>
+        <p class="facility">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
             eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-            nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
-        <div class="sidepic">
-            <img class="sidepic" src="/Users/evanlcoakley/The-Iron-Yard/Week-One/week-one-project/images/background-1.jpg">
-            <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
-        </div>
+            nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.
+        </p>
 
-        <div class="table">
-            <h3>Monthly Plans</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <td>Plan</td>
-                        <td>Price</td>
-                        <td>Access</td>
-                    </tr>
-                </thead>
+        <aside>
+            <img class="shelf" src="./images/background-1.jpg ">
+            <div class="shelfp">Every member has access to shelf space and all of the studio's shared equipment.</div>
 
-                <tbody>
-                    <tr>
-                        <td>Desk Only</td>
-                        <td>$50/mo</td>
-                        <td>Business Hours + Weekly Kiln Access</td>
+        </aside>
 
-                    </tr>
-                    <tr>
-                        <td>Desk + Storage</td>
-                        <td>$100/mo</td>
-                        <td>Business Hours + Weekly Kiln Access</td>
-                    </tr>
-                    <tr>
-                        <td>Unlimited</td>
-                        <td>$150/mo</td>
-                        <td>Unlimited Access</td>
-                    </tr>
-                </tbody>
+        <div class="leader">Monthly Plans</div>
 
-            </table>
+        <table>
+            <tr class="th">
+                <td>Plan</td>
+                <td>Price</td>
+                <td>Access</td>
+            </tr>
+            <tr class="darker">
+                <td>Desk Only</td>
+                <td>$50/mo.</td>
+                <td>Business Hours + Weekly Kiln Access</td>
+            </tr>
+            <tr>
+                <td>Desk + Storage</td>
+                <td> $100/mo.</td>
+                <td> Business Hours + Weekly Kiln Access</td>
+            </tr>
+            <tr class="darker">
+                <td> Unlimited</td>
+                <td>$150/mo.</td>
+                <td>Unlimited access</td>
+            </tr>
+        </table>
 
-        </div>
+    </section>
 
-        <footer id="site-footer">
-            <span>Copyright 2017, Bent Creek Ceramics</span>
-        </footer>
+    <footer>
+        Copyright 2017, Bent Creek Ceramics
+    </footer>
+
 </body>
-
-
-
 
 </html>
