--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav id="topnav">
                 <div class="logo1" id="mylogo"></div>
                 <div class="nav-links">
-                    <a class="home" href="#home ">Home</a>
-                    <a class="about" href="#about ">About</a>
-                    <a class="newsletter" href="#newsletter ">Newsletter</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About</a>
+                    <a href="./newsletter.html">Newsletter</a>
                 </div>
 
 
