--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 
                 </div>
                 <div class="nav-links">
-                    <a href="#home ">Home</a>
-                    <a href="#about ">About</a>
-                    <a href="#newsletter ">Newsletter</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About</a>
+                    <a href="./newsletter.html">Newsletter</a>
                 </div>
                 <div></div>
             </nav>
